<resources>
    <string name="app_name">Weather</string>
    <string name="location">Location</string>
    <string name="update_at">Update at</string>
    <string name="status">Status</string>
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="created_by">Created by</string>
    <string name="me">Alexey</string>
    <string name="min_temp">Min temp</string>
    <string name="max_temp">Max temp</string>
</resources>