<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/locationMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location"
                android:textSize="24sp"
                android:text="@string/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/update_at"
                android:textSize="14sp"
                android:text="@string/update_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/overviewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/status"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="0"
                android:textSize="90sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tempMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp">

                </TextView>

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                </Space>

                <TextView
                    android:id="@+id/tempMax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsMain"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise"
                        app:tint="@color/text_color">

                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp">

                    </TextView>


                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset"
                        app:tint="@color/text_color">

                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp">

                    </TextView>


                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind"
                        app:tint="@color/text_color">

                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp">

                    </TextView>


                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>

            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp">

            </Space>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="@color/text_color">

                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp">

                    </TextView>


                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="@color/text_color">

                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp">

                    </TextView>


                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info"
                        app:tint="@color/text_color">

                    </ImageView>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="5dp">
                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/created_by"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me"
                        android:textSize="14sp">

                    </TextView>


                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">
                </Space>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>